--- a/index.html
+++ b/index.html
@@ -49,13 +49,55 @@
           style="bottom:0;right:0"></i>
       </div>
     <!-- (2) large quote -->
-    <div style="height: 700px" class="pt7 relative truncate">
+    <div id="large-quote" style="height: 900px" class="pt7 relative truncate">
       <div id="sprinkles"></div>
       <div class="tc relative primary-purple">
         <div class="sub-header pb3" style="padding-right:100px">all i want is more hours in </div>
         <div class="sub-header pl2" style="padding-left: 100px">the day...and <span class="primary-pink">cake</span>. that is all.</div>
         <span class="body absolute pt3 f4" style="right: 15%">- some wise person.</span>
-        <!-- sprinkles --> 
+      </div>
+    </div>
+    <!-- (3) stripes -->
+    <div class="flex sub-header white" style="height: 900px">
+      <div class='bg--beige w-20 relative'>
+        <div 
+          class="absolute" 
+          style="width: 900px; transform-origin: left; transform:rotate(-90deg); left: 45%; bottom: 30px;"
+        >
+          eat nothing in moderation
+        </div>
+      </div>
+      <div class='bg--primary-pink w-20 z-2' style="transform: translateY(-50px)">
+        <div 
+          class="absolute" 
+          style="width: 900px; transform-origin: left; transform:rotate(-90deg); left: 45%; bottom: 30px;"
+        >
+          cookies are my kryptonite
+        </div>
+      </div>
+      <div class='bg--dark-pink w-20 z-2' style="transform: translateY(-100px)">
+        <div
+          class="absolute" 
+          style="width: 900px; transform-origin: left; transform:rotate(-90deg); left: 45%; bottom: 30px;"
+        >
+          did someone say dessert?
+        </div>
+      </div>
+      <div class='bg--light-purple w-20 z-2' style="transform: translateY(-150px)">
+        <div
+          class="absolute" 
+          style="width: 900px; transform-origin: left; transform:rotate(-90deg); left: 45%; bottom: 30px;"
+        >
+          cake is the best breakfast
+        </div>
+      </div>
+      <div class='bg--primary-purple w-20 z-2' style="transform: translateY(-200px)">
+        <div
+          class="absolute" 
+          style="width: 900px; transform-origin: left; transform:rotate(-90deg); left: 45%; bottom: 30px;"
+        >
+          life is short, eat cake first
+        </div>
       </div>
     </div>
     <script>
